# modelforge

./: -  .continue-here.md  .dockerignore  .gitignore  AUDIT_REPORT.md  AUDIT_RUN_LISTED.json  AUDIT_RUN_LISTED.md  CHANGELOG.md  CHATGPT_RESPONSE_FULL.md  DEPLOY_NOW.md  Dockerfile  EXTERNAL_IC_REVIEW_2026-05-15.md  GAP_ANALYSIS_TO_9.md  GOLD_STANDARD_AUDIT_2026-04-21.md  GTM_STRATEGY.md  IC_DOSSIER_2026-05-15.md  LICENSE  MOAT_SWEEP.md  OPUS_INDEPENDENT_REVIEW.md  PRD_missing_parts.md  PRD_v010_foreign_markets.md  PRD_v03_dataroom_ingestion.md  PRD_v03_pf_sculpted_amort.md  PRD_v04_to_v10_sota.md  PRD_v06_stress_test_fixes.md  PRD_v07_bulge_tier_breadth.md  PRD_v089_fully_live.md  PRD_v10_world_class_hero.md  PRD_v11_score_to_8.md  README.md  SCORECARD.md  SCORECARD_v1.md  SCORECARD_v2.md  SCORECARD_v3.md  SECURITY.md  SOTA_AUDIT.md  STRESS_TEST_REPORT_2026-04-21.md  THREAT_MODEL.md  TRIPLE_REVIEW_2026-05-15.md  TRIPLE_REVIEW_2026-05-15_v3.md  (+36 more)
.github/: FUNDING.yml
benchmarks/: PROTOCOL.md  README.md
compliance/: soc2_vendor_comparison.md
deploy/: render.yaml
docs/: architecture.md  cli-reference.md  comparison.md  faq.md  generate-live-formula-excel-model-from-spec-with-source-lineage.md  index.md  quickstart.md  templates.md
examples/: bank_fig_meridian.yaml  clo_midmarket.yaml  credit_memo_cdmo.yaml  dcf_enel.yaml  development_pbsa_genericcity.yaml  fairness_amplifon.yaml  hgb_carveout_dach_chemicals.yaml  merger_tim_iliad.yaml  minibond_logistics.yaml  npl_mixed_portfolio.yaml  portfolio_review_us_lower_mm.yaml  project_finance_solar.yaml  real_enfinity_solar_pf.yaml  real_estate_pbsa.yaml  real_stevanato_3statement.yaml  sponsor_lbo_techco.yaml  sponsor_lbo_us_saas.yaml  structured_credit_pmi.yaml  three_statement_cdmo.yaml  unitranche_cdmo.yaml  unitranche_uk_servicesco.yaml
migrations/: 001_supabase_init.sql
modelforge/: __init__.py  audit_log.py  cli.py  mcp_server.py
output/: bt_pred.csv  bt_real.csv  dcf_enel_v2.yaml  risk_cdmo.json  roi_example.md  roi_finint.md  unitranche_cdmo.REVERSE_REPORT.md  unitranche_reversed.yaml
research/: arc_threat_profile.md  whitepaper_us034_outline.md
scripts/: audit_listed.py  generate_sbom.py  inspect_workbook.py  moat_sweep.py
tests/: test_bank_fig.py  test_certify_schedule.py  test_chat.py  test_collab.py  test_collab_realtime.py  test_conservation_audit.py  test_debt_rollforward.py  test_development_re.py  (+40 more)
(+448 files in other folders)
