[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelforge-finance"
version = "0.12.0"
description = "Bulge-tier Excel financial model factory. Every cell live-formulated, every number traceable. MCP-native."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Whatsonyourmind" }]
license = { text = "Proprietary" }

dependencies = [
    "pydantic>=2.6",
    "openpyxl>=3.1.2",
    "pyyaml>=6.0.1",
    "rich>=13.7",
    "click>=8.1",
    "formulas>=1.2.7",
    "reportlab>=4.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
validate = []  # formulas is now core — kept as empty extra for back-compat
data = ["requests>=2.31", "pandas>=2.2"]
ingest = ["anthropic>=0.89", "pdfplumber>=0.11", "pypdf>=5.0"]
ingest-ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17", "Pillow>=10.0", "pdfplumber>=0.11"]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "python-multipart>=0.0.9"]
export = ["python-pptx>=1.0", "python-docx>=1.1"]
mcp = ["mcp>=1.12.0"]
deck = ["kiwisolver>=1.4", "Pillow>=10.0", "python-pptx>=1.0"]
dev = ["pytest>=8", "ruff>=0.3", "reportlab>=4.0"]

[project.scripts]
modelforge = "modelforge.cli:main"
modelforge-mcp = "modelforge.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelforge*"]

[tool.setuptools.package-data]
"modelforge.deck.themes" = ["data/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"
